--- a/app/src/main/res/layout-h600dp/activity_play_details.xml
+++ b/app/src/main/res/layout-h600dp/activity_play_details.xml
@@ -45,9 +45,9 @@
                     android:id="@+id/view_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginEnd="40dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/ic_hexnow"
                     android:elevation="5dp"
@@ -61,9 +61,9 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginEnd="40dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/ic_hexnow"
                     android:elevation="5dp"
@@ -143,7 +143,7 @@
                         android:id="@+id/no_question_answered"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="15 questions answered"
                         android:textColor="@color/white"
@@ -165,7 +165,7 @@
                         android:id="@+id/time_taken"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="45 Minutes"
                         android:textColor="@color/white"
@@ -187,7 +187,7 @@
                         android:id="@+id/accuracy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="80% Accurate"
                         android:textColor="@color/white"
@@ -209,7 +209,7 @@
                         android:id="@+id/mode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text=""
                         android:textColor="@color/white"
@@ -229,9 +229,9 @@
                     android:id="@+id/btn_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"
                     android:layout_marginBottom="35dp"
                     android:background="@drawable/playbtn_bg">
 
@@ -242,9 +242,9 @@
                     android:id="@+id/new_game1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"
                     android:layout_marginBottom="35dp"
                     android:background="@drawable/playbtn_bg">
 
@@ -258,7 +258,7 @@
                             android:layout_width="70dp"
                             android:layout_height="70dp"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="10dp"
                             android:src="@drawable/ic_sports_esports_black_48dp"
                             app:tint="@color/white" />
 
@@ -271,7 +271,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="30dp"
+                                android:layout_marginStart="30dp"
                                 android:orientation="vertical">
 
                                 <TextView
@@ -292,9 +292,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="30dp"
+                                android:layout_marginStart="30dp"
                                 android:layout_marginTop="-2dp"
-                                android:layout_marginRight="40dp"
+                                android:layout_marginEnd="40dp"
                                 android:orientation="vertical">
 
                                 <TextView
@@ -380,7 +380,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:fontFamily="@font/arimo"
                 android:text="@string/share"
                 android:textColor="@color/black"
