--- a/app/src/main/res/layout-h720dp/activity_play_details.xml
+++ b/app/src/main/res/layout-h720dp/activity_play_details.xml
@@ -46,9 +46,9 @@
                     android:id="@+id/view_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginEnd="40dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/ic_hexnow"
                     android:elevation="5dp"
@@ -62,9 +62,9 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginEnd="40dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/ic_hexnow"
                     android:elevation="5dp"
@@ -119,8 +119,8 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/ultra"
                 android:gravity="center"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:text="@string/can_you_beat_that"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -151,7 +151,7 @@
                         android:id="@+id/no_question_answered"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="15 questions answered"
                         android:textColor="@color/white"
@@ -173,7 +173,7 @@
                         android:id="@+id/time_taken"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="45 Minutes"
                         android:textColor="@color/white"
@@ -195,7 +195,7 @@
                         android:id="@+id/accuracy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text="80% Accurate"
                         android:textColor="@color/white"
@@ -217,7 +217,7 @@
                         android:id="@+id/mode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:fontFamily="@font/arimo"
                         android:text=""
                         android:textColor="@color/white"
@@ -236,8 +236,8 @@
                     android:id="@+id/btn_forAnim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
                     android:layout_marginBottom="35dp"
                     android:background="@drawable/playbtn_bg">
 
@@ -248,9 +248,9 @@
                     android:id="@+id/new_game1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="30dp"
 
-                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"
                     android:background="@drawable/playbtn_bg">
 
                     <LinearLayout
@@ -263,7 +263,7 @@
                             android:layout_width="70dp"
                             android:layout_height="70dp"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="10dp"
                             android:src="@drawable/ic_sports_esports_black_48dp"
                             app:tint="@color/white" />
 
@@ -276,7 +276,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="30dp"
+                                android:layout_marginStart="30dp"
                                 android:orientation="vertical">
 
                                 <TextView
@@ -297,9 +297,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="30dp"
+                                android:layout_marginStart="30dp"
                                 android:layout_marginTop="-2dp"
-                                android:layout_marginRight="40dp"
+                                android:layout_marginEnd="40dp"
                                 android:orientation="vertical">
 
                                 <TextView
@@ -385,7 +385,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:fontFamily="@font/arimo"
                 android:text="@string/share"
                 android:textColor="@color/black"
