--- a/app/src/main/res/layout-h720dp/activity_credit.xml
+++ b/app/src/main/res/layout-h720dp/activity_credit.xml
@@ -4,26 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:alpha="0.8"
+    android:background="@color/black"
     tools:context=".CreditActivity">
 
-    <RelativeLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.8"
-        android:background="@color/black">
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent">
-
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="match_parent"
+            android:gravity="center|top"
             android:orientation="vertical">
 
             <TextView
@@ -42,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/arimo"
-                android:text="Chukwudi Edoga"
+                android:text="@string/chukwudi_edoga"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -51,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/arimo"
-                android:text="Clinton Onuigbo"
+                android:text="@string/clinton_onuigbo"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -60,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/arimo"
-                android:text="Dike Kingsley Oneh"
+                android:text="@string/dike_kingsley_oneh"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -69,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/arimo"
-                android:text="Ubesie Kenechukwu"
+                android:text="@string/ubesie_kenechukwu"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -78,163 +71,114 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/arimo"
-                android:text="Vincent Sunday"
+                android:text="@string/vincent_sunday"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/arimo"
+                android:text="@string/amos_lucky_chibueze"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/arimo"
+                android:text="@string/toochukwu_dennis"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:fontFamily="@font/montserrat"
+                android:text="@string/contact_us"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat"
-                    android:text="@string/contact_us"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/facebook_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:padding="10dp"
+                android:text="@string/reach_us_on_facebook"
+                android:textColor="@color/white"
+                app:drawableStartCompat="@drawable/ic_baseline_facebook_24"
+                app:drawableTint="@color/white" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+            <TextView
+                android:id="@+id/twitter_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:padding="10dp"
+                android:text="@string/twitter"
+                android:textColor="@color/white"
+                app:drawableStartCompat="@drawable/twitter"
+                app:drawableTint="@color/white" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_facebook_24"
-                        app:tint="@color/white" />
+            <TextView
+                android:id="@+id/email_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:padding="10dp"
+                android:text="@string/send_us_an_email"
+                android:textColor="@color/white"
+                app:drawableStartCompat="@drawable/ic_baseline_mail_outline_24"
+                app:drawableTint="@color/white" />
 
-                    <TextView
-                        android:id="@+id/facebook_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="@string/reach_us_on_facebook"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/twitter"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:id="@+id/twitter_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="@string/twitter"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_mail_outline_24"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:id="@+id/email_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="@string/send_us_an_email"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_phone_24"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:id="@+id/phone_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="@string/call_us"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/phone_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:padding="10dp"
+                android:text="@string/call_us"
+                android:textColor="@color/white"
+                app:drawableStartCompat="@drawable/ic_baseline_phone_24"
+                app:drawableTint="@color/white" />
 
 
         </LinearLayout>
-    </RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:id="@+id/close_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp">
 
-        >
-
-        <RelativeLayout
-            android:id="@+id/close_container"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp">
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/hexagon"
+            app:tint="@color/white" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/hexagon"
-                app:tint="@color/white" />
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_baseline_close_24"
+            app:tint="@color/black" />
 
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_baseline_close_24"
-                app:tint="@color/black" />
-
-        </RelativeLayout>
     </RelativeLayout>
+
 </RelativeLayout>
