Added four languages: pt, hi, ur, and ar

--- a/app/src/main/res/layout-h480dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h480dp/activity_dashboard.xml
@@ -17,8 +17,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:gravity="center"
             android:layout_weight="1"
             >
@@ -56,7 +56,7 @@
                 android:id="@+id/account"
                 android:layout_width="120dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:orientation="horizontal"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
@@ -73,7 +73,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="70dp"
+                    android:layout_marginStart="70dp"
 
                     android:fontFamily="@font/montserrat"/>
 
@@ -130,8 +130,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="-40dp"
             android:layout_weight="1.2"
             >
@@ -141,8 +141,8 @@
                 android:id="@+id/btn_forAnim"
                 android:layout_marginTop="35dp"
                 android:layout_marginBottom="35dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/playbtn_bg"
                 >
 
@@ -154,8 +154,8 @@
                 android:id="@+id/new_game"
                 android:layout_marginTop="35dp"
                 android:layout_marginBottom="35dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/playbtn_bg"
                 >
                 <LinearLayout
@@ -169,7 +169,7 @@
                         android:layout_height="50dp"
                         android:src="@drawable/ic_sports_esports_black_48dp"
                         app:tint="@color/white"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:layout_gravity="center_vertical"
                         />
                     <RelativeLayout
@@ -181,7 +181,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -203,9 +203,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:layout_marginTop="-2dp"
-                            android:layout_marginRight="40dp"
+                            android:layout_marginEnd="40dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -236,8 +236,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             >
 
             <RelativeLayout
@@ -255,7 +255,7 @@
                     app:tint="@color/white"
                     android:alpha="0.8"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     />
                 <TextView
                     android:id="@+id/leaderboard_text"
@@ -276,8 +276,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 >
@@ -302,8 +302,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 >
@@ -326,7 +326,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="50dp"
+                android:layout_marginStart="50dp"
                 android:background="@drawable/whitepolygon"
                 >
                 <LinearLayout
@@ -342,7 +342,7 @@
                         android:text="@string/leaderboard"
                         android:textStyle="bold"
                         android:textSize="16dp"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
                         android:textColor="@color/black"
                         />
                     <TextView
@@ -351,7 +351,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/see_your_ranking"
                         android:textSize="13sp"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
                         android:textColor="@color/basic_color"
                         />
                 </LinearLayout>
@@ -363,8 +363,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="10dp"
             android:padding="10dp"
             >
@@ -388,8 +388,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="10dp"
             android:padding="10dp"
             >
