--- a/app/src/main/res/layout-h1024dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h1024dp/activity_dashboard.xml
@@ -17,8 +17,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="20dp"
             android:gravity="center"
             >
@@ -39,7 +39,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="-5dp"
+                        android:layout_marginStart="-5dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:rotation="90"
@@ -47,7 +47,7 @@
                         app:tint="@color/basic_color" />
                     <ImageView
                         android:layout_width="32dp"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginStart="15dp"
                         android:layout_height="32dp"
                         android:layout_centerInParent="true"
                         android:src="@drawable/ic_baseline_person_outline_24"/>
@@ -72,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="70dp"
+                    android:layout_marginStart="70dp"
                     android:fontFamily="@font/montserrat"
                     android:text=""
                     android:textColor="@color/white"
@@ -87,8 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
                 >
@@ -163,15 +163,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             >
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:id="@+id/btn_forAnim"
-                android:layout_marginRight="35dp"
-                android:layout_marginLeft="35dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
                 android:background="@drawable/playbtn_bg"
                 >
 
@@ -181,8 +181,8 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:id="@+id/new_game"
-            android:layout_marginRight="35dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginStart="35dp"
             android:background="@drawable/playbtn_bg"
             >
             <LinearLayout
@@ -208,8 +208,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="40dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="40dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -231,9 +231,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginStart="30dp"
                         android:layout_marginTop="-2dp"
-                        android:layout_marginRight="40dp"
+                        android:layout_marginEnd="40dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -264,8 +264,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="100dp"
             >
 
@@ -285,7 +285,7 @@
                 app:tint="@color/white"
                 android:alpha="0.8"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 />
 
             <TextView
@@ -317,7 +317,7 @@
                         android:text="@string/leaderboard"
                         android:textStyle="bold"
                         android:textSize="20sp"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
                         android:textColor="@color/black"
                         />
                     <TextView
@@ -338,8 +338,8 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="40dp"
             android:padding="10dp"
             >
@@ -362,8 +362,8 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="40dp"
             android:padding="10dp"
             >
