--- a/app/src/main/res/layout-h720dp/activity_main.xml
+++ b/app/src/main/res/layout-h720dp/activity_main.xml
@@ -22,9 +22,9 @@
                 android:id="@+id/dd_logo"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginStart="50dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginEnd="50dp"
                 android:layout_marginBottom="20dp"
                 android:alpha="0"
                 android:src="@mipmap/dd_logo" />
@@ -52,9 +52,9 @@
                     android:id="@+id/web_development"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginEnd="50dp"
                     android:orientation="horizontal">
 
                     <RelativeLayout
@@ -94,9 +94,9 @@
                     android:id="@+id/mobile_development"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginEnd="50dp"
                     android:orientation="horizontal">
 
                     <RelativeLayout
@@ -136,9 +136,9 @@
                     android:id="@+id/digital_marketing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginEnd="50dp"
                     android:orientation="horizontal">
 
                     <RelativeLayout
@@ -178,9 +178,9 @@
                     android:id="@+id/data_science"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginEnd="50dp"
                     android:orientation="horizontal">
 
                     <RelativeLayout
