--- a/app/src/main/res/layout/activity_play_details.xml
+++ b/app/src/main/res/layout/activity_play_details.xml
@@ -51,8 +51,8 @@
             android:paddingTop="5dp"
             android:elevation="5dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             >
 
 
@@ -66,8 +66,8 @@
             android:paddingTop="5dp"
             android:elevation="5dp"
             android:background="@drawable/ic_hexnow"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             >
 
             <LinearLayout
@@ -145,7 +145,7 @@
                 android:text="15 questions answered"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/arimo"/>
         </LinearLayout>
         <LinearLayout
@@ -162,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="45 Minutes"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:fontFamily="@font/arimo"/>
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="80% Accurate"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:fontFamily="@font/arimo"/>
@@ -190,7 +190,7 @@
                 android:id="@+id/mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/arimo"
                 android:text=""
                 android:textColor="@color/white"
@@ -210,8 +210,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_forAnim"
                 android:layout_marginBottom="35dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/playbtn_bg"
                 >
 
@@ -222,9 +222,9 @@
                 android:id="@+id/new_game1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
 
-                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/playbtn_bg">
 
                 <LinearLayout
@@ -237,7 +237,7 @@
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:src="@drawable/ic_sports_esports_black_48dp"
                         app:tint="@color/white" />
 
@@ -250,7 +250,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -271,9 +271,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="30dp"
+                            android:layout_marginStart="30dp"
                             android:layout_marginTop="-2dp"
-                            android:layout_marginRight="40dp"
+                            android:layout_marginEnd="40dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -358,7 +358,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/share"
                 android:textStyle="bold"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:fontFamily="@font/arimo"/>
