--- a/app/src/main/res/layout-h300dp/activity_play_details.xml
+++ b/app/src/main/res/layout-h300dp/activity_play_details.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootview"
     android:background="@color/basic_color"
     tools:context=".PlayDetailsActivity">
 
@@ -112,12 +111,12 @@
             </RelativeLayout>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40dp"
                 android:fontFamily="@font/ultra"
                 android:text="@string/can_you_beat_that"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
@@ -127,8 +126,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:gravity="center"
-                android:visibility="gone"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -327,9 +326,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal"
         android:layout_marginBottom="50dp"
-        >
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:id="@+id/home"
@@ -410,14 +408,14 @@
 
 
     </LinearLayout>
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        ads:adSize="FULL_BANNER"
         android:layout_marginBottom="0dp"
+        ads:adSize="FULL_BANNER"
         ads:adUnitId="@string/banner_adunit">
 
     </com.google.android.gms.ads.AdView>
